fix merge conflict

--- a/project-root/assets/css/style.css
+++ b/project-root/assets/css/style.css
@@ -425,7 +425,7 @@
    }
    
    .title {
-     display: inline-block;
+     /* display: inline-block; */
      padding: 0 20px;
      background-color: white;
      position: relative;
